syntax = "proto3";
import "SessionTransfer.proto";
import "PlayerCount.proto";

package gameapi;

message Void {
}

service GameService {
  rpc SubmitSessionTransfer(SessionTransferRequest) returns (SessionTransferResponse) {}
  rpc GetPlayerCount(Void) returns (PlayerCount) {}
}
