syntax = "proto3";

package gameapi;

message PlayerCount {
  int32 players = 1;
}