syntax = "proto3";

package gameapi;

enum SessionTransferStatus {
  Success = 0;
  AlreadyLoggedIn = 1;
}

message SessionTransferRequest {
  int32 userId = 1;
  string ipAddress = 2;
  bytes identity = 3;
  bytes key = 4;
  bytes iv = 5;
}

message SessionTransferResponse {
  SessionTransferStatus status = 1;
}